; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_vdbemem.c_sqlite3ValueSetStr.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_vdbemem.c_sqlite3ValueSetStr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sqlite3ValueSetStr(i32* %0, i32 %1, i8* %2, i32 %3, void (i8*)* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca void (i8*)*, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store void (i8*)* %4, void (i8*)** %10, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %20

13:                                               ; preds = %5
  %14 = load i32*, i32** %6, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* %9, align 4
  %18 = load void (i8*)*, void (i8*)** %10, align 8
  %19 = call i32 @sqlite3VdbeMemSetStr(i32* %14, i8* %15, i32 %16, i32 %17, void (i8*)* %18)
  br label %20

20:                                               ; preds = %13, %5
  ret void
}

declare dso_local i32 @sqlite3VdbeMemSetStr(i32*, i8*, i32, i32, void (i8*)*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
